Fix the weird clipping (it was overflow: hidden) on the active tabs in the study paths type of tabs

--- a/apps/aquamesh/src/components/Layout/layout.scss
+++ b/apps/aquamesh/src/components/Layout/layout.scss
@@ -63,10 +63,8 @@
   }
 
   &:has(.flexlayout__tabset-selected) {
-    outline: 2px solid var(--primary-main);
-    outline-offset: 0;
-    position: relative;
-    z-index: 1;
+     outline: 2px solid var(--primary-main);
+    outline-offset: 0px;
   }
 }
 
